# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  scoreboard.db  tasks.py  user_data.db
dokumentaatio/: Arkkitehtuuri.md  arkkitehtuuri_main.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: alustava_maarittelydokumentti.md
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: MonopoliKaavio.md  SekvenssiKaavio.md
src/: database_connection.py  game.py  highscore_connection.py  main.py  memory_game.py  memory_game_logic.py  user_data.db  user_data.txt
src/tests/: game_test.py  memory_game_logic_test.py  test_game.py  user_data.db
